--- a/src/main/resources/org/example/kuet_library_management_desktop/Profile_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/Profile_view.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox spacing="10" alignment="CENTER" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml" style="-fx-padding: 20;">
-    <Label text="Student Profile" style="-fx-font-size: 20px; -fx-font-weight: bold;"/>
-    <Label text="Name: John Doe"/>
-    <Label text="ID: 12345"/>
-    <Label text="Email: john@example.com"/>
+<VBox alignment="CENTER" spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+    <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Student Profile" />
+    <Label text="Name: Amdadul Haque" />
+    <Label text="ID: 2207059" />
+    <Label text="Email: amdadul@example.com" />
 </VBox>
