--- a/src/main/resources/org/example/kuet_library_management_desktop/Library_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/Library_view.fxml
@@ -3,26 +3,51 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="330.0" prefWidth="568.0" spacing="16"
-      xmlns="http://javafx.com/javafx/17.0.12"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.kuet_library_management_desktop.LibraryController">
+<VBox alignment="CENTER" prefHeight="330.0" prefWidth="568.0" spacing="16" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kuet_library_management_desktop.LibraryController">
 
     <padding>
-        <Insets bottom="24" left="24" right="24" top="24"/>
+        <Insets bottom="24" left="24" right="24" top="24" />
     </padding>
 
     <Label text="KUET Library Management">
         <font>
-            <Font size="22"/>
+            <Font name="System Bold Italic" size="33.0" />
         </font>
+      <textFill>
+         <LinearGradient endX="1.0" endY="1.0">
+            <stops>
+               <Stop>
+                  <color>
+                     <Color red="0.02262248285114765" green="0.17894737422466278" blue="0.01723196916282177" />
+                  </color>
+               </Stop>
+               <Stop offset="0.9530012997754934">
+                  <color>
+                     <Color red="0.022099999710917473" green="0.17000000178813934" blue="0.017000000923871994" />
+                  </color>
+               </Stop>
+               <Stop offset="1.0">
+                  <color>
+                     <Color red="0.3520987629890442" green="0.4842105209827423" blue="0.17933723330497742" />
+                  </color>
+               </Stop>
+            </stops>
+         </LinearGradient>
+      </textFill>
     </Label>
 
     <HBox alignment="CENTER" spacing="12">
-        <Button onAction="#openAdminView" text="Open Admin Page"/>
-        <Button onAction="#openStudentView" text="Open Student Page"/>
+        <Button onAction="#openAdminView" text="Admin" textFill="#50dc52">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+        <Button onAction="#openStudentView" text="Student" textFill="#50dc52">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
     </HBox>
 
 </VBox>
