--- a/src/main/resources/org/example/kuet_library_management_desktop/Library_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/Library_view.fxml
@@ -40,13 +40,13 @@
     </Label>
 
     <HBox alignment="CENTER" spacing="12">
-        <Button onAction="#openAdminView" text="Admin" textFill="#50dc52">
+        <Button defaultButton="true" onAction="#openAdminView" text="Admin">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="20.0" />
          </font></Button>
-        <Button onAction="#openStudentView" text="Student" textFill="#50dc52">
+        <Button defaultButton="true" onAction="#openStudentView" text="Student">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="20.0" />
          </font></Button>
     </HBox>
 
