--- a/src/main/resources/org/example/kuet_library_management_desktop/StudentOptions_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/StudentOptions_view.fxml
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.kuet_library_management_desktop.StudentOptionsController"
-      alignment="CENTER" spacing="20" prefWidth="400" prefHeight="300">
+
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<VBox alignment="CENTER" prefHeight="300" prefWidth="400" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kuet_library_management_desktop.StudentOptionsController">
     <padding>
-        <Insets top="20" right="20" bottom="20" left="20"/>
+        <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
     <children>
-        <Label text="Student" style="-fx-font-size: 20px; -fx-padding: 10;" />
-        <Button text="Login" fx:id="loginBtn" onAction="#onLogin" prefWidth="200" />
-        <Button text="Register" fx:id="registerBtn" onAction="#onRegister" prefWidth="200" />
+        <Button fx:id="loginBtn" defaultButton="true" onAction="#onLogin" prefWidth="200" text="Login" textFill="#0c332d">
+         <font>
+            <Font name="Cambria Bold" size="25.0" />
+         </font></Button>
+        <Button fx:id="registerBtn" defaultButton="true" onAction="#onRegister" prefWidth="200" text="Register">
+         <font>
+            <Font name="Cambria Bold" size="25.0" />
+         </font></Button>
     </children>
 </VBox>
