--- a/src/main/resources/org/example/kuet_library_management_desktop/Admin_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/Admin_view.fxml
@@ -7,6 +7,7 @@
 
     <top>
         <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-background-color: #2c3e50; -fx-padding: 10;">
+            <Button text="←" onAction="#onBack" />
             <Label style="-fx-text-fill: white; -fx-font-size: 16px;" text="Welcome, Admin!" />
             <Region HBox.hgrow="ALWAYS" />
         </HBox>
