--- a/src/main/resources/org/example/kuet_library_management_desktop/StudentRegister_view.fxml
+++ b/src/main/resources/org/example/kuet_library_management_desktop/StudentRegister_view.fxml
@@ -8,6 +8,9 @@
     <children>
         <VBox spacing="12.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <children>
+                <HBox alignment="CENTER_LEFT" spacing="8">
+                    <Button text="←" onAction="#onBack" />
+                </HBox>
                 <Label alignment="CENTER" style="-fx-font-size:16px; -fx-font-weight:bold;" text="Student Registration" />
                 <GridPane hgap="10.0" vgap="10.0">
                     <columnConstraints>
@@ -41,11 +44,11 @@
 
                 <HBox alignment="CENTER_RIGHT" spacing="10.0">
                     <children>
-                        <Button fx:id="registerButton" text="Register" textFill="#338941">
+                        <Button fx:id="registerButton" text="Register" onAction="#onRegister" textFill="#338941">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                        <Button fx:id="cancelButton" text="Cancel" textFill="#d93434" />
+                        <Button fx:id="cancelButton" text="Cancel" onAction="#onBack" textFill="#d93434" />
                     </children>
                 </HBox>
             </children>
